<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tvSettingsLanguageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvSettingsTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSettingsLanguageTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Weekly hours settings -->
    <TextView
        android:id="@+id/tvWeeklyHoursTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekly_hours"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/spinnerLanguage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etWeeklyHours"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/tvWeeklyHoursTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvWorkingDaysTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/working_days"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etWeeklyHours"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etWorkingDays"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tvWorkingDaysTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/etWorkingDays"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>